--- a/package.json
+++ b/package.json
@@ -13,21 +13,25 @@
     "clean": "rm -rf dist",
     "lint": "eslint src/**/*.ts test/**/*.ts",
     "format": "prettier --write src/** test/**",
-    "build": "tsc -p tsconfig.build.json"
+    "build": "tsc -p tsconfig.build.json",
+    "docs": "typedoc"
   },
   "dependencies": {
     "graphql": "^14.5.8"
   },
   "devDependencies": {
-    "@types/jest": "^24.0.19",
+    "@types/jest": "^24.0.21",
     "@vadistic/eslint-config-node": "^0.1.6",
     "@vadistic/prettier-config": "^0.1.6",
     "@vadistic/scripts": "^0.1.6",
-    "eslint": "^6.5.1",
+    "eslint": "^6.6.0",
     "jest": "^24.9.0",
     "prettier": "^1.18.2",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
     "ts-jest": "^24.1.0",
     "ts-node": "^8.4.1",
+    "typedoc": "^0.15.0",
     "typescript": "^3.6.4"
   }
 }
