--- a/package.json
+++ b/package.json
@@ -25,19 +25,19 @@
     "cov": "jest --coverage"
   },
   "dependencies": {
-    "graphql": ">= 14.5.0"
+    "graphql": "^14.6.0"
   },
   "devDependencies": {
-    "@types/jest": "^24.0.21",
-    "@vadistic/eslint-config-node": "^0.1.6",
-    "@vadistic/prettier-config": "^0.1.6",
-    "@vadistic/scripts": "^0.1.6",
-    "eslint": "^6.6.0",
-    "jest": "^24.9.0",
-    "prettier": "^1.18.2",
-    "ts-jest": "^24.1.0",
-    "ts-node": "^8.4.1",
-    "typedoc": "^0.15.0",
-    "typescript": "^3.6.4"
+    "@types/jest": "^25.1.4",
+    "@vadistic/eslint-config-node": "^0.1.8",
+    "@vadistic/prettier-config": "^0.1.8",
+    "@vadistic/scripts": "^0.1.8",
+    "eslint": "^6.8.0",
+    "jest": "^25.1.0",
+    "prettier": "^1.19.1",
+    "ts-jest": "^25.2.1",
+    "ts-node": "^8.6.2",
+    "typedoc": "^0.16.11",
+    "typescript": "^3.8.3"
   }
 }
