--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "graphql-extra",
   "description": "GraphQL AST/SDL toolkit with extra features for code generation & testing",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "author": "Jakub Wadas <vadistic@gmail.com>",
   "license": "MIT",
   "homepage": "https://graphql-extra.netlify.com",
@@ -17,12 +17,13 @@
   ],
   "scripts": {
     "clean": "rm -rf dist && rm -rf docs && rm -rf coverage",
-    "lint": "eslint src/**/*.ts test/**/*.ts",
+    "lint": "eslint src/**/*.ts",
     "format": "prettier --write src/** test/**",
     "build": "tsc -p tsconfig.build.json",
     "docs": "typedoc src",
     "test": "jest",
-    "cov": "jest --coverage"
+    "cov": "jest --coverage",
+    "prepublishOnly": "yarn format && yarn lint && yarn test && yarn docs && yarn clean && yarn build "
   },
   "dependencies": {
     "graphql": "^14.6.0"
