--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "graphql-extra",
   "description": "GraphQL AST/SDL toolkit with extra features for code generation & testing",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "author": "Jakub Wadas <vadistic@gmail.com>",
   "license": "MIT",
   "homepage": "https://graphql-extra.netlify.com",
@@ -10,25 +10,26 @@
     "type": "git",
     "url": "https://github.com/vadistic/graphql-extra"
   },
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "files": [
-    "/dist"
-  ],
   "scripts": {
-    "clean": "rm -rf dist && rm -rf docs && rm -rf coverage",
+    "clean": "rm -rf pkg coverage tmp",
     "lint": "eslint --ext .ts src/**",
     "format": "prettier --write src/**",
-    "build": "tsc -p tsconfig.build.json",
+    "typecheck": "tsc -p tsconfig.json --outDir tmp",
+    "build": "pika build",
     "docs": "typedoc src",
     "test": "jest",
     "cov": "jest --coverage",
-    "prepublishOnly": "yarn format && yarn lint && yarn test && yarn docs && yarn clean && yarn build "
+    "prepublishOnly": "yarn format && yarn lint && yarn typecheck && yarn test && yarn docs && yarn clean && yarn build "
   },
   "peerDependencies": {
     "graphql": ">=14.6.0"
   },
   "devDependencies": {
+    "@pika/pack": "^0.5.0",
+    "@pika/plugin-build-node": "^0.9.2",
+    "@pika/plugin-build-types": "^0.9.2",
+    "@pika/plugin-build-web": "^0.9.2",
+    "@pika/plugin-standard-pkg": "^0.9.2",
     "@types/jest": "^25.2.1",
     "@vadistic/eslint-config-base": "^0.2.2",
     "@vadistic/prettier-config": "^0.2.2",
@@ -41,5 +42,26 @@
     "ts-node": "^8.8.2",
     "typedoc": "^0.17.3",
     "typescript": "^3.8.3"
+  },
+  "@pika/pack": {
+    "pipeline": [
+      [
+        "@pika/plugin-standard-pkg",
+        {
+          "exclude": [
+            "test/**/*"
+          ]
+        }
+      ],
+      [
+        "@pika/plugin-build-node"
+      ],
+      [
+        "@pika/plugin-build-types",
+        {
+          "tsconfig": "./tsconfig.build.json"
+        }
+      ]
+    ]
   }
 }
