--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,5 @@
     "baseUrl": ".",
     "rootDir": "src"
   },
-  "include": ["src/**"],
-  "exclude": ["node_modules/**", "coverage/**", "pkg/**", "tmp/**", "docs/**"]
+  "include": ["src"]
 }
