--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,5 +1,9 @@
 {
   "extends": "./tsconfig.json",
+  "compilerOptions": {
+    "incremental": false,
+    "outDir": "dist"
+  },
   "include": ["src"],
   "exclude": ["**/test/**", "**/**.test.ts"]
 }
