--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,20 @@
 {
   "compilerOptions": {
     "allowJs": false,
-    "esModuleInterop": true,
     "lib": ["esnext"],
-    "module": "commonjs",
     "moduleResolution": "node",
     "strict": true,
+
+    "module": "commonjs",
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "esModuleInterop": true,
     "target": "es2018",
     "incremental": true,
-
     "declaration": true,
-    "baseUrl": ".",
-    "rootDir": "src"
+
+    "baseUrl": "."
   },
-  "include": ["src"]
+  "include": ["src", "test", "scripts"],
+  "exclude": ["pkg", "node_modules"]
 }
