--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   },
   "scripts": {
     "clean": "rm -rf pkg coverage tmp docs dist",
-    "lint": "eslint --ext .ts src/**",
-    "format": "prettier --write src/**",
+    "lint": "eslint --ext .ts src test",
+    "format": "prettier --write src test",
     "typecheck": "tsc -p tsconfig.json --noEmit --incremental false",
     "build": "pika build",
     "docs": "typedoc src",
@@ -22,9 +22,10 @@
     "all": "yarn format && yarn lint && yarn typecheck && yarn test && yarn docs && yarn clean && yarn build "
   },
   "peerDependencies": {
-    "graphql": ">=14.6.0"
+    "graphql": ">=15.0.0"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
     "@babel/plugin-proposal-optional-chaining": "^7.9.0",
     "@pika/pack": "^0.5.0",
@@ -33,21 +34,22 @@
     "@pika/plugin-build-web": "https://gitpkg.now.sh/pikapkg/builders/packages/plugin-build-web/pkg",
     "@pika/plugin-standard-pkg": "https://gitpkg.now.sh/pikapkg/builders/packages/plugin-standard-pkg/pkg",
     "@types/jest": "^25.2.1",
-    "@vadistic/eslint-config-base": "^0.2.2",
+    "@vadistic/eslint-config": "^0.3.1",
     "@vadistic/pika-plugin-publish-config": "^0.3.0",
-    "@vadistic/prettier-config": "^0.2.2",
+    "@vadistic/prettier-config": "^0.3.0",
+    "@vadistic/tsask": "^0.2.2",
     "eslint": "^6.8.0",
     "graphql": "^15.0.0",
-    "jest": "^25.2.7",
-    "prettier": "^2.0.2",
-    "rollup": "^2.3.3",
+    "jest": "^25.3.0",
+    "prettier": "^2.0.4",
+    "rollup": "^2.6.1",
     "ts-jest": "^25.3.1",
     "ts-node": "^8.8.2",
-    "typedoc": "^0.17.3",
+    "typedoc": "^0.17.4",
     "typescript": "^3.8.3"
   },
   "resolutions": {
-    "rollup": "^2.3.3"
+    "rollup": "^2.6.1"
   },
   "publishConfig": {
     "access": "public"
