improvement: refactor doc api to class and add type extension methods

--- a/.eslintrc
+++ b/.eslintrc
@@ -9,5 +9,12 @@
     "project": "./tsconfig.json"
   },
 
-  "rules": {}
+  "rules": {
+    "no-useless-concat": "off",
+
+    "padding-line-between-statements": [
+      "error",
+      { "blankLine": "always", "prev": "*", "next": "return" }
+    ]
+  }
 }
