--- a/.eslintrc
+++ b/.eslintrc
@@ -17,7 +17,13 @@
       { "blankLine": "always", "prev": "*", "next": "return" }
     ],
 
-    "@typescript-eslint/brace-style": ["error", "stroustrup", { "allowSingleLine": true }],
+    "max-len": ["error", 120],
+
+    "@typescript-eslint/brace-style": [
+      "error",
+      "stroustrup",
+      { "allowSingleLine": true }
+    ],
 
     "@typescript-eslint/explicit-function-return-type": ["error"]
   }
