feat: add api for Schema and OperationType definitions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
   "editor.defaultFormatter": "dbaeumer.vscode-eslint",
+
   "[typescript]": {
     "editor.defaultFormatter": "dbaeumer.vscode-eslint"
-  }
+  },
+
+  "typescript.preferences.importModuleSpecifier": "relative"
 }
