--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "graphql": ">=15.0.0"
   },
   "dependencies": {
-    "mix-classes": "^1.1.10"
+    "mix-classes": "^1.1.10",
+    "ts-mixer": "^5.3.0"
   },
   "devDependencies": {
     "@types/jest": "^25.2.1",
